media/jellyfin/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
spec:
  podSelector:
    matchLabels:
      app: jellyfin
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: jellyfin
spec:
  podSelector:
    matchLabels:
      app: jellyfin
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: network
      podSelector:
        matchLabels:
          app.kubernetes.io/component: proxy
          gateway.envoyproxy.io/owning-gateway-name: cluster-gateway
    ports:
    - protocol: TCP
      port: 8096
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
  - to:
    - ipBlock:
        cidr: 192.168.10.100/32
    ports:
    - protocol: TCP
      port: 2049
